--- a/blog/package.json
+++ b/blog/package.json
@@ -7,7 +7,7 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "start": "node ./blog/dist/server/entry.mjs",
+    "start": "node dist/server/entry.mjs",
     "astro": "astro",
     "generate-content": "node scripts/generate-content.js"
   },
