--- a/blog/package.json
+++ b/blog/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^6.19.0",
     "mysql2": "^3.14.3",
     "node-cron": "^3.0.3",
+    "nodemailer": "^7.0.6",
     "openai": "^4.67.3",
     "sharp": "^0.33.5",
     "slugify": "^1.6.6",
